[gd_scene load_steps=3 format=3 uid="uid://c7icmb03fpksn"]

[ext_resource type="Script" uid="uid://bcbo26hvue84b" path="res://scenes/main/tower/gun_turret/gun_turret.gd" id="1_8y7fp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8y7fp"]
radius = 137.03284

[node name="GunTurret" type="Node2D"]
script = ExtResource("1_8y7fp")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Placeholder" type="ColorRect" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
mouse_filter = 2
color = Color(0.18359044, 0.18359044, 0.18359044, 1)

[node name="Marker2D" type="Marker2D" parent="Placeholder"]
position = Vector2(37, 16)

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(-1.4758279, -1.4758279)
collision_layer = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8y7fp")

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
